; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_swap.c_pagevec_lookup_tag.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_swap.c_pagevec_lookup_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pagevec = type { i32, i32 }
%struct.address_space = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pagevec_lookup_tag(%struct.pagevec* %0, %struct.address_space* %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.pagevec*, align 8
  %7 = alloca %struct.address_space*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.pagevec* %0, %struct.pagevec** %6, align 8
  store %struct.address_space* %1, %struct.address_space** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load %struct.address_space*, %struct.address_space** %7, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = load i32, i32* %9, align 4
  %14 = load i32, i32* %10, align 4
  %15 = load %struct.pagevec*, %struct.pagevec** %6, align 8
  %16 = getelementptr inbounds %struct.pagevec, %struct.pagevec* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @find_get_pages_tag(%struct.address_space* %11, i32* %12, i32 %13, i32 %14, i32 %17)
  %19 = load %struct.pagevec*, %struct.pagevec** %6, align 8
  %20 = getelementptr inbounds %struct.pagevec, %struct.pagevec* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  %21 = load %struct.pagevec*, %struct.pagevec** %6, align 8
  %22 = call i32 @pagevec_count(%struct.pagevec* %21)
  ret i32 %22
}

declare dso_local i32 @find_get_pages_tag(%struct.address_space*, i32*, i32, i32, i32) #1

declare dso_local i32 @pagevec_count(%struct.pagevec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
